# simpleagent_template

./: .gitignore  CMakeLists.txt  README.md
include/: cubesat_defs.h
include/utility/: Device.h  DeviceDetail.h  RemoteAgent.h  SimpleAgent.h
libraries/SimpleAgent/: AgentRequest.h  CMakeLists.txt  Device.cpp  Device.h  DeviceDetail.h  DeviceRequest.h  RemoteAgent.h  RequestHelper.h  SimpleAgent.cpp  SimpleAgent.h  StringTools.h
source/: CMakeLists.txt  my_agent.cpp
source/utility/: Device.cpp  SimpleAgent.cpp
